syntax = "proto3";

option java_package = "org.grpc.generated";
option java_multiple_files = true;


service UpdateProfileEmailServer{
  rpc profileUpdate(mailRequesttoUpdate) returns(updateProfileResponse);
}

message mailRequesttoUpdate{
	int32 userId = 1;
}

message updateProfileResponse{
	string message = 1;
	int32 Responsecode = 2;
}
